// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer should add double quoted escaped text 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "double",
  },
  Object {
    "column": 8,
    "line": 2,
    "token": "quoted",
  },
  Object {
    "column": 14,
    "line": 2,
    "token": "\\"text\\"s spaces\\"",
  },
]
`;

exports[`tokenizer should add double quoted text 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "double",
  },
  Object {
    "column": 8,
    "line": 2,
    "token": "quoted",
  },
  Object {
    "column": 14,
    "line": 2,
    "token": "\\"text with spaces\\"",
  },
]
`;

exports[`tokenizer should add expression 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "a",
  },
  Object {
    "column": 3,
    "line": 2,
    "token": "=",
  },
  Object {
    "column": 5,
    "line": 2,
    "token": "b",
  },
]
`;

exports[`tokenizer should add multi line commented text 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "text",
  },
  Object {
    "column": 1,
    "line": 3,
    "token": "/*",
  },
  Object {
    "column": 3,
    "line": 6,
    "token": "
with
comment
",
  },
  Object {
    "column": 17,
    "line": 6,
    "token": "*/",
  },
]
`;

exports[`tokenizer should add simple text 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "text",
  },
]
`;

exports[`tokenizer should add single line commented text 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "text",
  },
  Object {
    "column": 1,
    "line": 3,
    "token": "//",
  },
  Object {
    "column": 3,
    "line": 3,
    "token": " with comment",
  },
]
`;

exports[`tokenizer should add single quoted escaped text 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "single",
  },
  Object {
    "column": 8,
    "line": 2,
    "token": "quoted",
  },
  Object {
    "column": 14,
    "line": 2,
    "token": "'text's spaces'",
  },
]
`;

exports[`tokenizer should add single quoted text 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "single",
  },
  Object {
    "column": 8,
    "line": 2,
    "token": "quoted",
  },
  Object {
    "column": 14,
    "line": 2,
    "token": "'text with spaces'",
  },
]
`;

exports[`tokenizer should add text escapes 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "text",
  },
  Object {
    "column": 6,
    "line": 2,
    "token": "\\\\",
  },
  Object {
    "column": 8,
    "line": 2,
    "token": "escapes",
  },
]
`;

exports[`tokenizer should add text with spaces 1`] = `
Array [
  Object {
    "column": 1,
    "line": 2,
    "token": "text",
  },
  Object {
    "column": 6,
    "line": 2,
    "token": "with",
  },
  Object {
    "column": 11,
    "line": 2,
    "token": "spaces",
  },
]
`;
